# aesterisk

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.yml
app/: .env.development  .eslintrc.json  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx
app/app/api/verify/: route.ts
app/app/panel/[teamID]/: layout.tsx
app/app/panel/[teamID]/components/: stats-card.tsx
app/app/panel/[teamID]/hooks/: socket.tsx
app/app/panel/caches/: account.tsx  team.tsx
app/components/app/: team-switcher-loader.tsx  team-switcher.tsx
app/components/ui/: progress.tsx
app/lib/: auth.ts  eventbus.ts  signing.ts  sql.ts  types.ts
app/lib/buses/: events.ts  socket.ts
app/lib/types/: account.ts  packets.ts  team.ts  user.ts
daemon/: Cargo.toml
daemon/src/: config.rs  docker.rs  encryption.rs  logging.rs  main.rs  packets.rs  services.rs
daemon/src/docker/: network.rs  server.rs
daemon/src/packets/: auth.rs  handshake.rs  init_data.rs  listen.rs  sync.rs
daemon/src/services/: client.rs  node_status.rs  server_status.rs  status.rs
docker/nginx/: default.conf
migrations/: example_data.sql  v0.1.0.sql
packet/: Cargo.toml
packet/src/: app_server.rs  daemon_server.rs  events.rs  lib.rs  main.rs  server_app.rs  server_daemon.rs  web_server.rs
packet/src/app_server/: auth.rs  handshake_response.rs  listen.rs
packet/src/daemon_server/: auth.rs  event.rs  handshake_response.rs
packet/src/server_app/: auth_response.rs  event.rs  handshake_request.rs
packet/src/server_daemon/: auth_response.rs  handshake_request.rs  init_data.rs  listen.rs  sync.rs
packet/src/server_web/: auth_response.rs  event.rs  handshake_request.rs
packet/src/web_server/: auth.rs  handshake_response.rs  listen.rs  sync.rs
server/: Cargo.toml
server/.sqlx/: query-0b8efe7f8270ce4b860f3f75f95d13d26861ef0c3e55a3a770665212ea5e179c.json  query-121fdc71aa266c5b115fda496b54fd6f8790ef89bfb429726c5f7032e46ccaee.json  query-49b7cea679678f9bee22688ab237d3ffb343236265370cac5e6905b7747103b0.json  query-4dc044fa48b9802182cbb46a211284d06e3f616bf95bebe7bac30a3db5c8411e.json  query-7b0291851ed8c5276071d1ede66ca54d13b06c08960cb607658f482a0ada2a93.json
server/src/: app.rs  config.rs  daemon.rs  daemon_server.rs  db.rs  encryption.rs  logging.rs  main.rs  server.rs  state.rs  statics.rs  types.rs  web.rs
web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(auth)/auth/: layout.tsx
web/app/(auth)/auth/error/: page.tsx
web/app/(auth)/auth/login/: page.tsx
web/app/auth/: layout.tsx
web/app/auth/login/: page.tsx
web/app/auth/login/components/: login-button.tsx
web/app/dash/: navbar.tsx
web/app/dash/[team]/: layout.tsx  page.tsx
web/app/dash/[team]/(root)/: layout.tsx  page.tsx
web/app/dash/[team]/(server)/: layout.tsx
web/app/dash/[team]/domains/: page.tsx
web/app/dash/[team]/networks/: page.tsx
web/buses/: event.ts  socket.ts
web/caches/: account.ts  networks.ts  nodes.ts  servers.ts  team.ts
web/components/app/: team-test.tsx
web/components/app/code-block/: index.tsx
web/components/app/data-list/: index.tsx
web/components/app/header/: avatar.tsx  dropdown-label.tsx  index.tsx
web/components/app/networks-list/: actions.ts  client.tsx  columns.tsx  index.tsx  loader.tsx
web/components/app/no-mfa-warning/: client.tsx  index.tsx
web/components/app/nodes-list/: actions.ts  client.tsx  columns.tsx  index.tsx  loader.tsx
web/components/app/servers-list/: actions.ts  client.tsx  columns.tsx  index.tsx  loader.tsx
web/components/app/sidebar/: components.tsx  index.tsx  item.tsx
web/components/app/tab-bar/: client.tsx  server.tsx
web/components/app/team-switcher/: client.tsx  index.tsx  loader.tsx  server.tsx
web/components/app/team-test/: index.tsx
web/components/ui/: accordion-steps.tsx  accordion.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  pagination.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  table.tsx  textarea.tsx  tooltip.tsx
web/hooks/: event.tsx
web/hooks/socket/: client.tsx  index.tsx  loader.tsx
web/lib/: auth.ts  bus.ts  dev.ts  env.ts  signing.ts  sql.ts  utils.ts
web/lib/buses/: event.ts  socket.ts
web/packets/: auth.ts  events.ts  handshake.ts  listen.ts  packet.ts  sync.ts
web/public/: server.pub
web/types/: account.ts  network.ts  node.ts  packets.ts  plan.ts  role.ts  server.ts  team.ts  user.ts
(+19 files in other folders)
