[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
packet = { path = "../packet" }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tokio-tungstenite = "0.24.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
josekit = "0.10.1"
