[package]
name = "aesterisk-daemon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futures-channel.workspace = true
futures-util.workspace = true
packet = { path = "../packet", package = "aesterisk-packet" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
josekit.workspace = true
