[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
josekit = "0.10.0"
lazy_static = "1.5.0"
openssl = "0.10.68"
packet = { path = "../packet" }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_toml = "0.0.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
