[package]
name = "aesterisk-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-channel.workspace = true
futures-util.workspace = true
josekit.workspace = true
lazy_static.workspace = true
openssl = "0.10.68"
packet = { path = "../packet", package = "aesterisk-packet" }
reqwest = "0.12.9"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
