[package]
name = "aesterisk-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
lock_debug = []
tokio_debug = ["console-subscriber"]
default = []

[dependencies]
console-subscriber = { version = "0.4.1", optional = true }
dashmap = "6.1.0"
dotenvy = { git = "https://github.com/allan2/dotenvy", version = "0.15.7", features = ["macros"] }
futures-channel.workspace = true
futures-util.workspace = true
josekit.workspace = true
lazy_static.workspace = true
openssl = "0.10.68"
packet = { path = "../packet", package = "aesterisk-packet" }
reqwest = "0.12.9"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
